<resources>
    <string name="app_name">California Classics 2</string>
    <string name="intro">California Classics GARAGE is where car specialists and classic car passionates come together. Own a classic that needs a refreshing touch or you want to have one but dont know where to start? We are here just for you. Our mechanics can fix anything and bring your classic to back to life. We love what we do and would love to meet you, a friendly chat and a piece of advice is always free. Come see our fabulous collection of oldtimers and give us a try! Satisfaction is guaranteed.</string>
    <string name="adres">5000 San Raphael, \nPalm Springs, CA 92264</string>
    <string name="phone">+1 777 666 5555</string>
    <string name="web">www.GARAGECALIFORNIA.com</string>
    <string name="hours">Monday to Saturday \n8.00am - 6.00pm</string>
</resources>
