<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cat.black.californiaclassics2.MainActivity"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/mainimage"
        android:src="@drawable/mainimage_notint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_main_h"
        android:scaleType="centerCrop"/>
    <ImageView
        android:id="@+id/tint_top"
        android:src="@drawable/toptint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_tt_h"
        android:layout_alignTop="@id/mainimage"
        android:scaleType="fitXY"/>
    <ImageView
        android:id="@+id/tint_bottom"
        android:src="@drawable/main_tintmode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_bt_h"
        android:layout_alignBottom="@id/mainimage"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="30dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="-29dp" />

            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/logo_k0a"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginLeft="@dimen/logo_m"
                android:layout_marginRight="@dimen/logo_m"
                android:layout_marginStart="@dimen/logo_m"
                android:layout_marginEnd="@dimen/logo_m"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"/>

            <HorizontalScrollView
                android:id="@+id/gallery_scroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <LinearLayout
                    android:id="@+id/gallery_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="16dp">

                    <ImageButton
                        android:id="@+id/mini_b1"
                        android:src="@drawable/mini_img1"
                        android:background="@color/bg_zero"
                        android:layout_width="@dimen/gal_mini_w"
                        android:layout_height="@dimen/gam_mini_h"
                        android:layout_marginLeft="@dimen/gal_mini_m"
                        android:layout_marginRight="@dimen/gal_mini_m"
                        android:scaleType="fitXY"/>

                    <ImageButton
                        android:id="@+id/mini_b2"
                        android:src="@drawable/mini_img2"
                        android:background="@color/bg_zero"
                        android:layout_width="@dimen/gal_mini_w"
                        android:layout_height="@dimen/gam_mini_h"
                        android:layout_marginLeft="@dimen/gal_mini_m"
                        android:layout_marginRight="@dimen/gal_mini_m"
                        android:scaleType="fitXY"/>

                    <ImageButton
                        android:id="@+id/mini_b3"
                        android:src="@drawable/mini_img3"
                        android:background="@color/bg_zero"
                        android:layout_width="@dimen/gal_mini_w"
                        android:layout_height="@dimen/gam_mini_h"
                        android:layout_marginLeft="@dimen/gal_mini_m"
                        android:layout_marginRight="@dimen/gal_mini_m"
                        android:scaleType="fitXY"/>

                    <ImageButton
                        android:id="@+id/mini_b4"
                        android:src="@drawable/mini_img4"
                        android:background="@color/bg_zero"
                        android:layout_width="@dimen/gal_mini_w"
                        android:layout_height="@dimen/gam_mini_h"
                        android:layout_marginLeft="@dimen/gal_mini_m"
                        android:layout_marginRight="@dimen/gal_mini_m"
                        android:scaleType="fitXY"/>

                    <ImageButton
                        android:id="@+id/mini_b5"
                        android:src="@drawable/mini_img5"
                        android:background="@color/bg_zero"
                        android:layout_width="@dimen/gal_mini_w"
                        android:layout_height="@dimen/gam_mini_h"
                        android:layout_marginLeft="@dimen/gal_mini_m"
                        android:layout_marginRight="@dimen/gal_mini_m"
                        android:scaleType="fitXY"/>

                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/box_ctl"
                android:src="@drawable/corner_tl"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/gallery_scroll"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

            <ImageView
                android:id="@+id/box_ctr"
                android:src="@drawable/corner_tr"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/gallery_scroll"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"/>

            <ImageView
                android:id="@+id/box_bt"
                android:src="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/gallery_scroll"
                app:layout_constraintLeft_toRightOf="@+id/box_ctl"
                app:layout_constraintRight_toLeftOf="@+id/box_ctr"/>

            <TextView
                android:id="@+id/box_txt"
                android:text="@string/intro"
                android:textSize="@dimen/txt_box"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/box_border"
                android:paddingRight="@dimen/box_border"
                app:layout_constraintTop_toBottomOf="@+id/box_bt"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"/>

            <ImageView
                android:id="@+id/box_cbl"
                android:src="@drawable/corner_bl"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_txt"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

            <ImageView
                android:id="@+id/box_cbr"
                android:src="@drawable/corner_br"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_txt"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"/>

            <ImageView
                android:id="@+id/box_bb"
                android:src="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_txt"
                app:layout_constraintLeft_toRightOf="@+id/box_cbl"
                app:layout_constraintRight_toLeftOf="@+id/box_cbr"/>

            <ImageView
                android:id="@+id/bulletmap"
                android:src="@drawable/icomap_n2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_starter"
                app:layout_constraintTop_toBottomOf="@+id/box_bb"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

            <TextView
                android:id="@+id/textmap"
                android:text="@string/adres"
                android:textStyle="bold"
                android:textSize="@dimen/txt_bullet"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_starter"
                android:paddingLeft="@dimen/bullet_txt_push"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/box_bb"
                app:layout_constraintLeft_toRightOf="@+id/bulletmap"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"/>

            <ImageView
                android:id="@+id/bulletweb"
                android:src="@drawable/icoweb_n2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                app:layout_constraintTop_toBottomOf="@+id/bulletmap"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1"/>

            <TextView
                android:id="@+id/textweb"
                android:text="@string/web"
                android:textStyle="bold"
                android:textSize="@dimen/txt_bullet"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                android:paddingLeft="@dimen/bullet_txt_push"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bulletmap"
                app:layout_constraintLeft_toRightOf="@+id/bulletweb"
                app:layout_constraintRight_toLeftOf="@+id/guideline2" />

            <ImageView
                android:id="@+id/bulletphone"
                android:src="@drawable/icophone_n2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                app:layout_constraintTop_toBottomOf="@+id/bulletweb"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

            <TextView
                android:id="@+id/textphone"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textSize="@dimen/txt_bullet"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                android:paddingLeft="@dimen/bullet_txt_push"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bulletweb"
                app:layout_constraintLeft_toRightOf="@+id/bulletphone"
                app:layout_constraintRight_toLeftOf="@+id/guideline2" />

            <ImageView
                android:id="@+id/bullettime"
                android:src="@drawable/icotime_n2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                app:layout_constraintTop_toBottomOf="@+id/bulletphone"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

            <TextView
                android:id="@+id/texttime"
                android:text="@string/hours"
                android:textStyle="bold"
                android:textSize="@dimen/txt_bullet"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/bullet_mt_continue"
                android:paddingLeft="@dimen/bullet_txt_push"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/bulletphone"
                app:layout_constraintLeft_toRightOf="@+id/bullettime"
                app:layout_constraintRight_toLeftOf="@+id/guideline2" />

            <LinearLayout
                android:id="@+id/socials"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/social_mt"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/bullettime"
                app:layout_constraintLeft_toLeftOf="@+id/guideline1"
                app:layout_constraintRight_toLeftOf="@+id/guideline2">

                <ImageButton
                    android:id="@+id/fb_button"
                    android:src="@drawable/sico_fb_n2"
                    android:background="@color/bg_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/social_size_factor"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:onClick="openFacebook"/>

                <ImageButton
                    android:id="@+id/yt_button"
                    android:src="@drawable/sico_yt_n3"
                    android:background="@color/bg_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/social_size_factor"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:onClick="openYoutube"/>

                <ImageButton
                    android:id="@+id/gp_button"
                    android:src="@drawable/sico_gp_n3"
                    android:background="@color/bg_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/social_size_factor"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:onClick="openGplus"/>

                <ImageButton
                    android:id="@+id/cr_button"
                    android:src="@drawable/sico_cr_n3"
                    android:background="@color/bg_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/social_size_factor"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:onClick="openWeb"/>

                <ImageButton
                    android:id="@+id/mp_button"
                    android:src="@drawable/sico_mp_n3"
                    android:background="@color/bg_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/social_size_factor"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:onClick="openGmaps"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/fullscr_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_fscr_fade"
        android:visibility="gone">

        <ImageView
            android:id="@+id/fullscr_img"
            android:src="@drawable/full_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fscr_ms"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter" />

    </RelativeLayout>
</RelativeLayout>